# feedbackmonk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml
.claude/: project.json  settings.json
.sqlx/: query-002691fc737195558ec2c4989fc6f15072d777b362ae942ae2b7e57c4923dfdc.json  query-08f90133fb40c9b40a9291063a01a49cd09cb1d26b78bcf7c8163f40f13581a3.json  query-0aa9700026e35d46de464898fa38874c2dce086996545d82c9a8d99bc1019a99.json  query-0f381c0f6758624306ef03d86856a1c3f2999782fb6ca3a510307fdcb1bd7b73.json  query-15a8a27281a8bca3e39b4519cc9e2b7435e4536ea5dc515d5542e1aab42147e4.json  query-1853c9c74b92f8e0fe30b4a9bd02634facb09072b0f9677a50c97b6322457025.json  query-18a390252727c21815f51ef659d420cdb7300e6561921c54dfbec5a8592a2564.json  query-193e10510a768e3dfe836c649e91b9ba67df120503c58831f7ca3d8951282c61.json  query-19a658c8fc07594b5530718f666d7079549e531aa0b347dec8a669d0d89e947a.json  query-1a551e2231c44eb15effc11fd76910a28bef75f20e5024f67afedcfff352a07b.json  query-1b10a4e1c131b5b6cbace95539db12d60d8dd706b05536681bd345eb6fe89c1e.json  query-1e26e057b306f26e4bf4dc001929ed991d953a6906b9fbab959dd097619456ca.json  query-214db75040f1771efb7c7806150963c2a84d05a8143ddc956ac2ebb97c53e8d8.json  query-232f2122b4a520c643b7a4946ac99ccd068fc9628adced20612d20a341e39305.json  query-2875cf09f829c91de5db38e395528a2103699eb9094d38a94a8e5430bf2a14bf.json  query-2eb7c7dadf6a12e3cf1ed10738d22a670ce42c94ad03f5ee9c7390d4cce40f19.json  query-344876301331a85b4e8c64852fdbc8d2f792b97fd585e8132f13e11ecae17107.json  query-3eaf1121d82a0e27b0ea9b6fba04740e9b58765cfc3277963e31fbb3b1799920.json  query-4be692c67e532d502140a4fc67915a38646004af252fea0356d89dd2fa826aab.json  query-4cd0bbd91569c5f0e1dd8ca05010878a191d66a74e14a440db4ced996f61c333.json  query-51ac23bc7e55073359cddbb2330c2b41022e2410ea86d8fa196ea15461b1640c.json  query-575a21dc4f0d2edb87b03b128d613848445074a63c054dd52b2250dd1f7955a4.json  query-59d081a8cab41e184f3fee2a97c069322abdf5a6883e6b767a9a90d171642f1d.json  query-5c7314c06b484d4d88b4ec849ea19dfe0fa78ef1719a3738057dd8f0b34c4cd8.json  query-6185e7915cf078a01f60fa97fd64e5ce5ecef96ccee5cd85c201dc9eaa387c95.json  query-68e19054a6d2dd6414857a77525b886eae47d94d661db01e6b561430de248e41.json  query-6eb99f54f9f5399f09b566334919ceb63fdbc96291c0c530de183fb4fa2687e7.json  query-713e29c740827026e9a81d66f89d477157336705559d33076aed7ac94b7c1633.json  query-73dd33eaa831bbc2103347f81a1826161430d289fc2f675bf09d1dedfa763ec6.json  query-78900a32dfa1f994eed0e72f29b119169ad62058d9af61baaa1790ca2dd721d0.json  query-7badb2536d32491f1f21c135dd5a57ae6742bf08cbbae2b3c7904995d38920cd.json  query-7cce4527f381838de1fbb20dde836ebaad0f3ae07433e9b6a353a00afd0e17d7.json  query-85653cc9bae49974961dd5902c04d183f5cbfa8ddeb1bafdcadd305c1eaeb330.json  query-8d226cd9b96d21b1378801d3d56c8d7b777712b745f586f831be3c9894b03dc0.json  query-8e2d7600f3a3d215fa47cbc256ea13fb39eced4fe4a8b8db9675336aa0762d97.json  query-8fd5d7797ee42ad7a5ce9cdb250ad96e83b6c9aae8e4b66faedc62458a539fe0.json  query-90678595aa2092f2c3fa8ff08bed341add26ab4c9c1ad76ce4cbada9596687a6.json  query-931d13932f4b82f184635d3bdd2bf2e14676d55fde179695bae61f2cdc78466e.json  query-93edfd91b3fecb73a79bf36f3b2d4a60322c9240f1da528aa00bf676c2fa07ed.json  query-96757f7fae4000be10cf0785d011d38264e84ad6547eb6803aa251ce43359096.json  (+28 more)
admin-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/: README.md
crates/feedbackmonk-anon/: Cargo.toml  README.md
crates/feedbackmonk-anon/src/: lib.rs
crates/feedbackmonk-api/: Cargo.toml  README.md
crates/feedbackmonk-api/src/: cors.rs  crash_correlation.rs  error.rs  lib.rs  main.rs  roadmap_voting_cache.rs  router.rs  state.rs  storage.rs
crates/feedbackmonk-api/src/auth/: README.md  mod.rs  ops.rs  password.rs  session.rs
crates/feedbackmonk-api/src/email/: README.md  env_smtp.rs  mailpit.rs  mod.rs  send.rs  templates.rs
crates/feedbackmonk-api/src/handlers/: README.md  admin_feedback.rs  admin_ops.rs  admin_tier.rs  attachments.rs  feedback.rs  health.rs  login.rs  me_feedback.rs  mod.rs  projects.rs  promote.rs  roadmap.rs  signing_keys.rs  signup.rs  widget_config.rs
crates/feedbackmonk-api/tests/: attachment_pii_corpus.rs  cors_preflight.rs  email_integration.rs  handlers.rs  me_feedback_isolation.rs  router_submission_integration.rs  tier_enforcement_smoke.rs
crates/feedbackmonk-core/: Cargo.toml  README.md
crates/feedbackmonk-core/examples/: export_tier_quotas.rs
crates/feedbackmonk-core/src/: ids.rs  lib.rs  models.rs  roadmap.rs  tier.rs
crates/feedbackr-api/: Cargo.toml  README.md
crates/feedbackr-api/src/: error.rs  lib.rs  main.rs  router.rs  state.rs
crates/feedbackr-api/src/auth/: README.md  session.rs
crates/feedbackr-api/src/email/: README.md  env_smtp.rs  mailpit.rs  mod.rs  send.rs  templates.rs
crates/feedbackr-api/src/handlers/: README.md  admin_feedback.rs  feedback.rs  mod.rs  projects.rs  signing_keys.rs  verify_email.rs
crates/feedbackr-api/tests/: email_integration.rs  handlers.rs  router_submission_integration.rs
crates/feedbackr-jwt/: Cargo.toml  README.md
crates/feedbackr-jwt/src/: lib.rs
crates/feedbackr-jwt/tests/: verify.rs
crates/feedbackr-repository/: Cargo.toml  README.md
crates/feedbackr-repository/src/: email_verifications.rs  error.rs  feedback.rs  feedback_replies.rs  feedback_status_history.rs  health.rs  lib.rs  projects.rs  scope.rs  signing_keys.rs  tenants.rs
crates/feedbackr-tracing/: Cargo.toml  README.md
crates/feedbackr-tracing/src/: layer.rs  lib.rs
crates/feedbackr-tracing/tests/: scrubber_patterns.rs
docs/: PROJECT_TRAJECTORY.md
ltads/: config.json
marketing/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
migrations/: 00001_p0_schema.sql  00002_email_verifications.sql  00003_feedback_status_history.sql  00004_feedback_replies.sql  00005_tenant_email_brand.sql  00006_roadmap_items.sql  00007_roadmap_votes.sql  00008_tenant_tier_check.sql  README.md  (+4 more)
(+403 files in other folders)
