[workspace]
resolver = "2"
members = [
    "crates/feedbackr-core",
    "crates/feedbackr-repository",
    "crates/feedbackr-api",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Feedbackr Contributors"]
version = "0.1.0"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
tracing = "0.1"
rand = "0.8"

[workspace.lints.clippy]
# Project-wide clippy baseline. The repository crate adds `pedantic` on top.
all = { level = "deny", priority = -1 }
