[workspace]
resolver = "2"
members = [
    "crates/feedbackmonk-anon",
    "crates/feedbackmonk-api",
    "crates/feedbackmonk-core",
    "crates/feedbackmonk-jwt",
    "crates/feedbackmonk-repository",
    "crates/feedbackmonk-tracing",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["feedbackmonk Contributors"]
version = "0.1.0"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
hmac = "0.12"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
subtle = "2"
blake3 = "1"
ed25519-dalek = "2"
governor = "0.6"
regex = "1"
once_cell = "1"

[workspace.lints.clippy]
# Project-wide clippy baseline. The repository crate adds `pedantic` on top.
all = { level = "deny", priority = -1 }
