[package]
name = "feedbackmonk-anon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
blake3 = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
