[package]
name = "feedbackmonk-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
feedbackmonk-anon = { path = "../feedbackmonk-anon" }
feedbackmonk-core = { path = "../feedbackmonk-core" }
feedbackmonk-jwt = { path = "../feedbackmonk-jwt" }
feedbackmonk-repository = { path = "../feedbackmonk-repository" }
feedbackmonk-tracing = { path = "../feedbackmonk-tracing" }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
http-body-util = "0.1"
mime = "0.3"
insta = "1"
rand_core = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[lib]
name = "feedbackmonk_api"
path = "src/lib.rs"

[[bin]]
name = "feedbackmonk-api"
path = "src/main.rs"
