[package]
name = "feedbackmonk-api"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
feedbackmonk-anon = { path = "../feedbackmonk-anon" }
feedbackmonk-core = { path = "../feedbackmonk-core" }
feedbackmonk-jwt = { path = "../feedbackmonk-jwt" }
feedbackmonk-repository = { path = "../feedbackmonk-repository" }
feedbackmonk-tracing = { path = "../feedbackmonk-tracing" }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
# `multipart` feature: attachment upload endpoint (Gap #1) uses axum's Multipart extractor.
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
# Shared runtime HTTP client (rustls). Two consumers: Gap #2 crash-event
# correlation (`crash_correlation` — outbound pulls to a Glitchtip/Sentry
# tracker) and Gap #1 attachments (S3 object-store backend). Same feature set
# already vetted in dev-dependencies; promoted to a runtime dep.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
http-body-util = "0.1"
mime = "0.3"
insta = "1"
rand_core = "0.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[lib]
name = "feedbackmonk_api"
path = "src/lib.rs"

[[bin]]
name = "feedbackmonk-api"
path = "src/main.rs"
