[package]
name = "feedbackr-jwt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
feedbackr-core = { path = "../feedbackr-core" }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
