[package]
name = "feedbackr-repository"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
feedbackr-core = { path = "../feedbackr-core" }
sqlx = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints.clippy]
# Pedantic on top of workspace `all = deny`. Allow the conventional
# Rust pattern where module-name and type-name repeat (e.g. tenants::TenantRepo).
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Repository submission methods accept the full feedback row's columns by
# design (Contract C1 freezes the signatures). Splitting into a builder
# would obscure the contract for marginal ergonomic gain.
too_many_arguments = "allow"
