[package]
name = "feedbackr-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
